# brain_tumor_ai

./: README.md  app.py  brain_tumor_inferable_10000.csv.csv  clinical_summaries_5000.csv  create_init_files.py  create_no_tumor_image.py  generate_clinical_summaries.py  generate_inferable_brain_tumor_dataset.py  project_requirements.txt  restructure_models.py  translations.py
models/: medical_nlp.py
models/models/models/: mri_recommender.py
models/models/models/models/: tumor_detector.py
utility/utils/: image_processor.py  text_processor.py
utility/utils/data/: medical_entities.py
utility/utils/data/database/package/: pyproject.toml
utility/utils/utils/data/database/: models.py
